--- a/docs/content/references/ts-sdk/dapp-kit/wallet-hooks/useSignAndExecuteTransactionBlock.mdx
+++ b/docs/content/references/ts-sdk/dapp-kit/wallet-hooks/useSignAndExecuteTransactionBlock.mdx
@@ -1,19 +1,42 @@
-import { UseSignAndExecuteTransactionBlockExample } from '@site/src/components/sdk-examples/wallet-hooks';
-
 # useSignAndExecuteTransactionBlock
 
 Use the `useSignAndExecuteTransactionBlock` hook to prompt the user to sign and execute a
 transaction block with their wallet.
 
-```ts
-import {
-    ConnectButton,
-    useCurrentAccount,
-    useSignAndExecuteTransactionBlock,
-} from '@iota/dapp-kit';
-import { useState } from 'react';
+```ts live noInline
+function withProviders(
+    Component: React.FunctionComponent<object>,
+    walletProviderProps?: Omit<ComponentProps<typeof WalletProvider>, 'children'>,
+) {
+    // Work around server-side pre-rendering
+    const queryClient = new QueryClient();
+    const networks = {
+        mainnet: { url: getFullnodeUrl('mainnet') },
+    };
 
-function MyComponent() {
+    return () => {
+        const [shouldRender, setShouldRender] = useState(false);
+        useEffect(() => {
+            setShouldRender(true);
+        }, [setShouldRender]);
+
+        if (!shouldRender) {
+            return null;
+        }
+
+        return (
+            <QueryClientProvider client={queryClient}>
+                <IotaClientProvider networks={networks}>
+                    <WalletProvider {...walletProviderProps}>
+                        <Component />
+                    </WalletProvider>
+                </IotaClientProvider>
+            </QueryClientProvider>
+        );
+    };
+}
+
+const UseSignAndExecuteTransactionBlockExample = withProviders(() => {
     const { mutate: signAndExecuteTransactionBlock } = useSignAndExecuteTransactionBlock();
     const [digest, setDigest] = useState('');
     const currentAccount = useCurrentAccount();
@@ -48,12 +71,10 @@ function MyComponent() {
             )}
         </div>
     );
-}
+});
+
+render(<UseSignAndExecuteTransactionBlockExample/>)
 ```
-
-## Example
-
-<UseSignAndExecuteTransactionBlockExample />
 
 ## Arguments
 
