--- a/docs/content/references/ts-sdk/dapp-kit/wallet-hooks/useWallets.mdx
+++ b/docs/content/references/ts-sdk/dapp-kit/wallet-hooks/useWallets.mdx
@@ -1,33 +1,59 @@
-import { UseWalletsExample } from '@site/src/components/sdk-examples/wallet-hooks';
-
 # useWallets
 
 The `useWallets` hook returns an array of wallets that are available to the user. The wallets are
 sorted by their priority, with the highest priority wallet being the first in the array.
 
-```ts
-import { useWallets } from '@iota/dapp-kit';
+```ts live noInline
+function withProviders(
+    Component: React.FunctionComponent<object>,
+    walletProviderProps?: Omit<ComponentProps<typeof WalletProvider>, 'children'>,
+) {
+    // Work around server-side pre-rendering
+    const queryClient = new QueryClient();
+    const networks = {
+        mainnet: { url: getFullnodeUrl('mainnet') },
+    };
 
-function MyComponent() {
+    return () => {
+        const [shouldRender, setShouldRender] = useState(false);
+        useEffect(() => {
+            setShouldRender(true);
+        }, [setShouldRender]);
+
+        if (!shouldRender) {
+            return null;
+        }
+
+        return (
+            <QueryClientProvider client={queryClient}>
+                <IotaClientProvider networks={networks}>
+                    <WalletProvider {...walletProviderProps}>
+                        <Component />
+                    </WalletProvider>
+                </IotaClientProvider>
+            </QueryClientProvider>
+        );
+    };
+}
+
+const UseWalletsExample = withProviders(() => {
     const wallets = useWallets();
 
     return (
         <div>
-            <h2>Installed wallets</h2>
+            <h2>Installed wallets:</h2>
             {wallets.length === 0 && <div>No wallets installed</div>}
             <ul>
                 {wallets.map((wallet) => (
-                    <li key={wallet.name}>{wallet.name}</li>
+                    <li key={wallet.name}>- {wallet.name}</li>
                 ))}
             </ul>
         </div>
     );
-}
+});
+
+render(<UseWalletsExample/>)
 ```
-
-## Example
-
-<UseWalletsExample />
 
 ## Wallet properties
 
