fix: replace reference to iota-test-validator

--- a/docs/content/developer/getting-started/get-coins.mdx
+++ b/docs/content/developer/getting-started/get-coins.mdx
@@ -42,7 +42,7 @@ curl --location --request POST 'https://faucet.iota-rebased-alphanet.iota.cafe/g
 If you're working with a local network, replace `'https://faucet.iota-rebased-alphanet.iota.cafe/gas'` with the appropriate value based on which package runs your network:
 
 - `iota-faucet`: `http://127.0.0.1:5003/gas`
-- `iota-test-validator`: `http://127.0.0.1:9123/gas`
+- `iota start`: `http://127.0.0.1:9123/gas`
 
 You can also get tokens from your [local faucet](local-network.mdx#use-the-local-faucet).
 
