doc: fix grammar in docs/content/developer/getting-started/local-network.mdx
Co-authored-by: Lucas Tortora <85233773+lucas-tortora@users.noreply.github.com>

--- a/docs/content/developer/getting-started/local-network.mdx
+++ b/docs/content/developer/getting-started/local-network.mdx
@@ -28,7 +28,7 @@ components except iota-node. If you want to see more detailed logs, you can remo
 
 :::danger No persistence
 
-Data on the local network do not persist when the `--force-regenesis` flag is
+Data on the local network does not persist when the `--force-regenesis` flag is
 used.
 
 To persist data use the `--config-dir` flag instead.
